Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -91,7 +91,7 @@ Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primar
 
 Topography, climate, and lithology all effect chemical weathering. High-relief regions lack extensive regolith development, and thus tend to have reaction-limited weathering regimes that are more prone to adjust when climate changes \cite{Gabet2009a, West2012a, Maher2014a}. High physical erosion rates contribute to high chemical weathering fluxes in these high-relief regions \citep{Godderis2017b}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Mafic rocks have higher Ca and Mg concentrations and dissolution rates than felsic rocks, and thus have the potential to more efficiently sequester carbon through silicate weathering \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions, which create steep landscapes of mafic lithologies, within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019b}.
 
-Quantitatively estimating the magnitude of decrease in steady-state \pCOtwo associated with the emergence of a region with a high carbon sequestration potential, such as the SEAI, is not straight-forward. As this region emerges, the total global silicate weathering flux will briefly exceed the volcanic degassing flux, causing \pCOtwo to initially decline until a new steady-state is established where the total magnitude of the \COtwo sinks is the same as before the change. However, the sensitivity of the silicate weathering flux in any particular location to this change in \pCOtwo is variable and dependent on the specific topography, climate, and lithology at that location. Furthermore, how regional climate responds to this change in \pCOtwo is itself spatially-variable. Therefore, the magnitude of \pCOtwo change that is required to balance the total global silicate weathering flux with the volcanic degassing flux will depend on the specific spatial distribution of topography, climate, and lithology at the time of emergence. As a result, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must model spatially-resolved climatology and silicate weathering fluxes in tandem and account for the spatial distribution of the factors that affect these inter-connected systems.
+Quantitatively estimating the magnitude of decrease in steady-state \pCOtwo associated with the emergence of a region with a high carbon sequestration potential, such as the SEAI, requires constraints on changing tectonic context and accounting of associated feedbacks. As this region emerges, the total global silicate weathering flux will briefly exceed the volcanic degassing flux, causing \pCOtwo to initially decline until a new steady-state is established where the total magnitude of the \COtwo sinks is the same as before the change. However, the sensitivity of the silicate weathering flux in any particular location to this change in \pCOtwo is variable and dependent on the specific topography, climate, and lithology at that location. Furthermore, how regional climate responds to this change in \pCOtwo is itself spatially-variable. Therefore, the magnitude of \pCOtwo change that is required to balance the total global silicate weathering flux with the volcanic degassing flux will depend on the specific spatial distribution of topography, climate, and lithology at the time of emergence. As a result, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must model spatially-resolved climatology and silicate weathering fluxes in tandem and account for the spatial distribution of the factors that affect these inter-connected systems.
 
 \section*{GEOCLIM Model}
 
@@ -142,13 +142,17 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm.
 
-Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The \pCOtwo values from the 5~Ma paleo-SEAI scenario overlap with many proxy-based estimates as well as values that emerge from hybrid climate model data assimilation approaches \cite{Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI; Fig. S9), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with SEAI emergence are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
+Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The \pCOtwo values from the 5~Ma paleo-SEAI scenario overlap with many proxy-based estimates as well as values that emerge from hybrid climate model data assimilation approaches \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI; Fig. S9), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with SEAI emergence are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
 The results of our SEAI scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of low-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}, its contribution is less than that of the SEAI, which have high-relief and a wet tropical climate in conjunction with high Ca+Mg lithologies.
 
 Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated with the emergence of the SEAI and enhanced silicate weathering is $\sim$19~ppm \cite{Molnar2015a}, in which case SEAI emergence would be a relatively minor contributor to Neogene cooling. This 19~ppm estimate was obtained using a 0-D equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. Furthermore, this simple linear relationship ignores spatial variability in topography and climatology, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm estimate is closer in magnitude to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (22--70 ppm; Fig. \ref{fig:scenario_pCO2}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially-varying topography and climatology significantly modulates silicate weathering rates, and must be accounted for when estimating \pCOtwo change associated with paleogeographic change.
 
 \section*{Alternative Mechanisms for Neogene Cooling}
+
+\subsection*{Ocean/Atmosphere Circulation}
+
+Some hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with SEAI emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 15~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}.
 
 \subsection*{Volcanic Degassing}
 
@@ -163,19 +167,19 @@ A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a 
 
 Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``change in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``change in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
 
-This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}, suggesting that changes in the volcanic degassing flux alone are insufficient to drive the majority of cooling observed over the Neogene. However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, take a scenario where the increase in global weatherability associated with SEAI emergence over the past 15~m.y. is an overestimate and the increase is more accurately reflected by the difference in global weatherability between our 5~Ma and modern tectonic boundary conditions (``change in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}). In this scenario, a decrease in the volcanic degassing flux from a value $\sim$7\% greater than the pre-industrial in conjunction with the smaller change in weatherability can achieve the same $\sim$280~ppm decrease in \pCOtwo.
+This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}. However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, take a scenario where the increase in global weatherability associated with SEAI emergence over the past 15~m.y. is an overestimate and the increase is more accurately reflected by the difference in global weatherability between our 5~Ma and modern tectonic boundary conditions (``change in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}). In this scenario, a decrease in the volcanic degassing flux from a value $\sim$7\% greater than the pre-industrial in conjunction with the smaller change in weatherability can achieve the same $\sim$280~ppm decrease in \pCOtwo.
 
 \subsection*{Himalayan Uplift}
 
-Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the ratio of silicate weathering fluxes from radiogenic cratonic rocks vs. juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically-unique carbonates. For example, highly radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a proxy for silicate weathering fluxes in the Cenozoic, and potentially deeper in the geologic record as well. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
+Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically-unique lithologies. For example, highly radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a proxy for silicate weathering fluxes in the Cenozoic, and potentially deeper in the geologic record as well. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
 
-Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the SEAI as they emerged would have occurred in tandem with such changes in the Himalaya. Given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with this orogeny remains a major challenge.
+Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the emerging SEAI would have occurred in tandem with such changes in the Himalaya, such that the effects of these paleogeographic changes on geochemical proxy records, like marine \SrSr, become difficult to disentangle. In addition, given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with Himalayan orogeny remains a major challenge.
 
-Global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced weathering in a region such as the SEAI is compensated by a decrease in weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
+\section*{The Global Carbon Cycle}
 
-\subsection*{Ocean/Atmosphere Circulation}
+Global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced silicate weathering in a region such as the SEAI is compensated by a decrease in silicate weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
-Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with SEAI emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 15~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}.
+However, the long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year timescales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been effected by SEAI emergence and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}).
 
 \section*{Conclusions}
 
